test_suite/ui/multiple_bits.stderr
error: Flags must have exactly one set bit
 --> $DIR/multiple_bits.rs:6:5
  |
6 |     MultipleBits = 6,
  |     ^^^^^^^^^^^^^^^^
